--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+          <div class="col-md-6">
+            <span class="copyright">Copyright &copy; ZID 2018</span>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -482,16 +482,7 @@
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <ul class="list-inline quicklinks">
-              <li class="list-inline-item">
-                <a href="#">Privacy Policy</a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">Terms of Use</a>
-              </li>
-            </ul>
-          </div>
+          
         </div>
       </div>
     </footer>
