--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">La sécurisation de clôture</h2>
+            <h2 class="section-heading text-uppercase">Nos Produits</h2>
             <br><br>
           </div>
         </div>
